--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/logo.png" rel="icon">
+    <link href="../img/logo.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,15 +21,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="../lib/animate/animate.min.css" rel="stylesheet">
+    <link href="../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="../lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -66,23 +66,23 @@
     <!-- Navbar & Hero Start -->
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-            <a href="index.html" class="navbar-brand p-0">
-                <h1 class="text-primary m-0"><img src="img/logo.png" alt="Logo"></h1>
+            <a href="../index.html" class="navbar-brand p-0">
+                <h1 class="text-primary m-0"><img src="../img/logo.png" alt="Logo"></h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="index.html" class="nav-item nav-link">Početna</a>
-                    <a href="o_nama.html" class="nav-item nav-link">O nama</a>
-                    <a href="vozni_park.html" class="nav-item nav-link">Vozni park</a>
-                    <a href="novosti.html" class="nav-item nav-link">Novosti</a>
-                    <a href="galerija.html" class="nav-item nav-link">Galerija</a>
-                    <a href="intervencije.html" class="nav-item nav-link">Intervencije</a>
-                    <a href="kontakt.html" class="nav-item nav-link">Kontakt</a>
+                    <a href="../index.html" class="nav-item nav-link">Početna</a>
+                    <a href="../o_nama.html" class="nav-item nav-link">O nama</a>
+                    <a href="../vozni_park.html" class="nav-item nav-link">Vozni park</a>
+                    <a href="../novosti.html" class="nav-item nav-link">Novosti</a>
+                    <a href="../galerija.html" class="nav-item nav-link">Galerija</a>
+                    <a href="../intervencije.html" class="nav-item nav-link">Intervencije</a>
+                    <a href="../kontakt.html" class="nav-item nav-link">Kontakt</a>
                 </div>
-                <a href="registracija.html" class="btn btn-primary rounded-pill py-2 px-4">Registracija</a>
+                <a href="../registracija.html" class="btn btn-primary rounded-pill py-2 px-4">Registracija</a>
             </div>
         </nav>
 
@@ -92,7 +92,7 @@
                     <div class="col-lg-10 pt-lg-5 mt-lg-5 text-center">
                         <h1 class="text-white mb-3 animated slideInDown" style="font-size: 40.6px;">DOBROVOLJNO VATROGASNO DRUŠTVO</h1>
                         <h1 class="text-white mb-3 animated slideInDown" style="font-size: 75px;">SATNICA ĐAKOVAČKA</h1>
-                        <p class="fs-4 text-white mb-4 animated slideInDown"><i class="fa fa-arrow-right text-primary me-2"></i>REGISTRACIJA</p>
+                        <p class="fs-4 text-white mb-4 animated slideInDown"><i class="fa fa-arrow-right text-primary me-2"></i>KOLAČIĆI</p>
                     </div>
                 </div>
             </div>
@@ -101,36 +101,41 @@
     <!-- Navbar & Hero End -->
 
 
-    <!-- Sign Up Start -->
-    <div class="singup_container">
-        <div class="wrapper">
-            <div class="title"><span>Registracija</span></div>
-                <form action="#">
-                    <div class="row">
-                        <i class="fas fa-envelope"></i>
-                        <input type="text" placeholder="Email adresa ili broj telefona" required>
-                    </div>
-                    <div class="row">
-                        <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Korisničko ime" required>
-                    </div>
-                    <div class="row">
-                        <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Lozinka" required>
-                    </div>
-                    <div class="row">
-                        <i class="fas fa-user-lock"></i>
-                        <input type="password" placeholder="Ponovite lozinku" required>
-                    </div>
-                    <div class="row button">
-                        <input type="submit" value="Izradi račun">
-                    </div>
-                    <div class="signup-link">Imate račun? <a href="prijava.html">Prijavite se</a></div>
-                </form>
+    <!-- Package Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+                <h6 class="section-title bg-white text-center text-primary px-3">FAQ</h6>
+                <h1 class="mb-5">Često postavljena pitanja</h1>
+            </div>
+            <div class="row g-4 justify-content-center">
+                <div class="text-left p-4">
+                    <h5><b>Tko u Republici Hrvatskoj obavlja vatrogasnu djelatnost?</b></h5>
+                    <p>Vatrogasnu djelatnost obavljaju vatrogasne postrojbe.</p>
+                    <ul>
+                        <li>Javne vatrogasne postrojbe <i>(JVP)</i></li>
+                        <li>Dobrovoljna vatrogasna društva <i>(DVD)</i></li>
+                        <li>Vatrogasne postrojbe u gospodarstvu <i>(PVPG / DVDG)</i></li>
+                        <li>Vatrogasne postrojbe za brzo djelovanje - intervencijske postrojbe</li>
+                    </ul>
+                    <br>
+
+                    <h5><b>Mogu li se djeca uključiti u rad vatrogasaca?</b></h5>
+                    <p>Vatrogasni podmladak (od 6 do 12 godina) i vatrogasna mladež (12 do 16 godina) u vatrogasnim organizacijama usvajaju osnovna znanja o opasnostima od požara i o vatrogastvu.</p>
+                    <p>Kroz vježbe, igre i natjecanja prilagođene uzrastu uče o važnosti timskog rada, pomaganja drugim ljudima, ali i uvježbavaju vještine koje će im koristiti u budućnost.</p>
+                    <p>Djeca se mogu uključiti u rad vatrogasnih društava uz pristanak roditelja.</p>
+                    <br>
+
+                    <h5><b>Kako pravilno dojaviti požar?</b></h5>
+                    <p>Ukoliko primijetite požar, odmah nazovite vatrogasce na broj 193. O požaru ili nekoj drugoj nesreći možete obavijestiti Centar 112 ili policiju na 192.</p>
+                    <p>Počnite razgovor odmah govoreći polako i razgovjetno, navodeći što se dogodilo i da li su ljudi u opasnosti. Navedite točnu adresu mjesta požara ili drugog izvanrednog događaja.</p>
+                    <p>Budite spremni dati dodatne informacije i osobne podatke, ukoliko vas operater zatraži.</p>
+                    <p>Završite razgovor kada vam operater kojeg ste kontaktirati to dozvoli te nemojte koristite telefonsku liniju dok ne dođu vatrogasci jer im je možda potrebna dodatna informacija.</p>
+                </div>
             </div>
         </div>
     </div>
-    <!-- Sign Up End -->
+    <!-- Package End -->
 
 
     <!-- Footer Start -->
@@ -139,11 +144,11 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Važni linkovi</h4>
-                    <a class="btn btn-link" href="o_nama.html">O nama</a>
-                    <a class="btn btn-link" href="galerija.html">Galerija</a>
-                    <a class="btn btn-link" href="intervencije.html">Intervencije</a>
-                    <a class="btn btn-link" href="kontakt.html">Kontakt</a>
-                    <a class="btn btn-link" href="registracija.html">Registracija</a>
+                    <a class="btn btn-link" href="../o_nama.html">O nama</a>
+                    <a class="btn btn-link" href="../galerija.html">Galerija</a>
+                    <a class="btn btn-link" href="../intervencije.html">Intervencije</a>
+                    <a class="btn btn-link" href="../kontakt.html">Kontakt</a>
+                    <a class="btn btn-link" href="../registracija.html">Registracija</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Kontakt informacije</h4>
@@ -159,22 +164,22 @@
                     <h4 class="text-white mb-3">Galerija</h4>
                     <div class="row g-2 pt-2">
                         <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/novosti/Brijest.jpg" alt="">
+                            <img class="img-fluid bg-light p-1" src="../img/novosti/Brijest.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/novosti/Vukovar_2023.jpg" alt="">
+                            <img class="img-fluid bg-light p-1" src="../img/novosti/Vukovar_2023.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/novosti/Brijest_4.jpg" alt="">
+                            <img class="img-fluid bg-light p-1" src="../img/novosti/Brijest_4.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/novosti/pozar_13srp.jpg" alt="">
+                            <img class="img-fluid bg-light p-1" src="../img/novosti/pozar_13srp.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/novosti/natjecanje_gorjani_2023.jpg" alt="">
+                            <img class="img-fluid bg-light p-1" src="../img/novosti/natjecanje_gorjani_2023.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/novosti/natjecanje_gorjani_2023.jpg" alt="">
+                            <img class="img-fluid bg-light p-1" src="../img/novosti/natjecanje_gorjani_2023.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -192,14 +197,14 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="index.html">DVD Satnica Đakovačka</a>, Sva prava pridržana. Template: <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>.
+                        &copy; <a class="border-bottom" href="../index.html">DVD Satnica Đakovačka</a>, Sva prava pridržana. Template: <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
-                            <a href="index.html">Naslovnica</a>
-                            <a href="kolacici.html">Kolačići</a>
-                            <a href="pomoc.html">Pomoć</a>
-                            <a href="faq.html">Često postavljena pitanja</a>
+                            <a href="../index.html">Naslovnica</a>
+                            <a href="../kolacici.html">Kolačići</a>
+                            <a href="../pomoc.html">Pomoć</a>
+                            <a href="../faq.html">Često postavljena pitanja</a>
                         </div>
                     </div>
                 </div>
@@ -216,16 +221,16 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/tempusdominus/js/moment.min.js"></script>
-    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="../lib/wow/wow.min.js"></script>
+    <script src="../lib/easing/easing.min.js"></script>
+    <script src="../lib/waypoints/waypoints.min.js"></script>
+    <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="../lib/tempusdominus/js/moment.min.js"></script>
+    <script src="../lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="../lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
