--- a/404.html
+++ b/404.html
@@ -82,7 +82,7 @@
                     <a href="intervencije.html" class="nav-item nav-link">Intervencije</a>
                     <a href="kontakt.html" class="nav-item nav-link">Kontakt</a>
                 </div>
-                <a href="registracija.html" class="btn btn-primary rounded-pill py-2 px-4">Registracija</a>
+                <a href="" class="btn btn-primary rounded-pill py-2 px-4">Registracija</a>
             </div>
         </nav>
 
@@ -92,7 +92,7 @@
                     <div class="col-lg-10 pt-lg-5 mt-lg-5 text-center">
                         <h1 class="text-white mb-3 animated slideInDown" style="font-size: 40.6px;">DOBROVOLJNO VATROGASNO DRUŠTVO</h1>
                         <h1 class="text-white mb-3 animated slideInDown" style="font-size: 75px;">SATNICA ĐAKOVAČKA</h1>
-                        <p class="fs-4 text-white mb-4 animated slideInDown"><i class="fa fa-arrow-right text-primary me-2"></i>REGISTRACIJA</p>
+                        <p class="fs-4 text-white mb-4 animated slideInDown"><i class="fa fa-arrow-right text-primary me-2"></i>NOVOSTI</p>
                     </div>
                 </div>
             </div>
@@ -101,37 +101,22 @@
     <!-- Navbar & Hero End -->
 
 
-    <!-- Sign Up Start -->
-    <div class="singup_container">
-        <div class="wrapper">
-            <div class="title"><span>Registracija</span></div>
-                <form action="#">
-                    <div class="row">
-                        <i class="fas fa-envelope"></i>
-                        <input type="text" placeholder="Email adresa ili broj telefona" required>
-                    </div>
-                    <div class="row">
-                        <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Korisničko ime" required>
-                    </div>
-                    <div class="row">
-                        <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Lozinka" required>
-                    </div>
-                    <div class="row">
-                        <i class="fas fa-user-lock"></i>
-                        <input type="password" placeholder="Ponovite lozinku" required>
-                    </div>
-                    <div class="row button">
-                        <input type="submit" value="Izradi račun">
-                    </div>
-                    <div class="signup-link">Imate račun? <a href="prijava.html">Prijavite se</a></div>
-                </form>
+    <!-- 404 Start -->
+    <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container text-center">
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
+                    <h1 class="display-1">404</h1>
+                    <h1 class="mb-4">Stranica Nije Pronađena</h1>
+                    <p class="mb-4">Žao nam je, no stranica koju pokušavate posjetiti ne postoji!<br>Predlažemo Vam da se vratite na početnu stranicu.</p>
+                    <a class="btn btn-primary rounded-pill py-3 px-5" href="">POVRATAK NA POČETNU STRANICU</a>
+                </div>
             </div>
         </div>
     </div>
-    <!-- Sign Up End -->
-
+    <!-- 404 End -->
+        
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
