--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 </head>
 
 <body>
-    <!-- Spinner Start -->
+    <!-- Loading Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
             <span class="sr-only">Učitavanje...</span>
         </div>
     </div>
-    <!-- Spinner End -->
+    <!-- Loading End -->
 
 
     <!-- Topbar Start -->
@@ -74,7 +74,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="index.html" class="nav-item nav-link">Početna</a>
+                    <a href="index.html" class="nav-item nav-link active">Početna</a>
                     <a href="o_nama.html" class="nav-item nav-link">O nama</a>
                     <a href="vozni_park.html" class="nav-item nav-link">Vozni park</a>
                     <a href="novosti.html" class="nav-item nav-link">Novosti</a>
@@ -143,7 +143,7 @@
     <!-- About End -->
 
 
-    <!-- Service Start -->
+    <!-- Emergency Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -199,10 +199,10 @@
             </div>
         </div>
     </div>
-    <!-- Service End -->
+    <!-- Emergency End -->
 
 
-    <!-- Destination Start -->
+    <!-- Gallery Start -->
     <div class="container-xxl py-5 destination">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -237,10 +237,10 @@
             </div>
         </div>
     </div>
-    <!-- Destination End -->
+    <!-- Gallery End -->
 
 
-    <!-- Package Start -->
+    <!-- News Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -302,56 +302,85 @@
             </div>
         </div>
     </div>
-    <!-- Package End -->
+    <!-- News End -->
 
 
-    <!-- Booking Start -->
-    <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <!-- Contact Start -->
+    <div class="container-xxl py-5">
         <div class="container">
-            <div class="booking p-5">
-                <div class="row g-5 align-items-center">
-                    <div class="col-md-6 text-white">
-                        <h6 class="text-white text-uppercase">Kontakt</h6>
-                        <h1 class="text-white mb-4">Kontaktiraj nas</h1>
-                        <p class="mb-4">Administratori stranice će na Vašu poruku odgovoriti u što kraćem roku.</p>
-                        <p class="mb-4">Odgovor ćete dobiti putem email adrese.</p>
+            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+                <h6 class="section-title bg-white text-center text-primary px-3">Kontakt</h6>
+                <h1 class="mb-5">Kontaktiraj nas</h1>
+            </div>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <h5>O primitku odgovora</h5>
+                    <p class="mb-4">Administratori stranice će na Vašu poruku odgovoriti u što kraćem roku.Odgovor ćete dobiti putem email adrese.</p>
+                    <div class="d-flex align-items-center mb-4">
+                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary" style="width: 50px; height: 50px;">
+                            <i class="fa fa-map-marker-alt text-white"></i>
+                        </div>
+                        <div class="ms-3">
+                            <h5 class="text-primary">Adresa</h5>
+                            <p class="mb-0">Ante Starčevića 24, Satnica Đakovačka</p>
+                        </div>
                     </div>
-                    <div class="col-md-6">
-                        <h1 class="text-white mb-4">Pošalji nam poruku</h1>
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control bg-transparent" id="name" placeholder="Your Name">
-                                        <label for="name">Ime i prezime</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="email" class="form-control bg-transparent" id="email" placeholder="Your Email">
-                                        <label for="email">Email adresa</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <textarea class="form-control bg-transparent" placeholder="Special Request" id="message" style="height: 100px"></textarea>
-                                        <label for="message">Poruka</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-outline-light w-100 py-3" type="submit">Pošalji!</button>
+                    <div class="d-flex align-items-center mb-4">
+                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary" style="width: 50px; height: 50px;">
+                            <i class="fa fa-phone-alt text-white"></i>
+                        </div>
+                        <div class="ms-3">
+                            <h5 class="text-primary">Telefon</h5>
+                            <p class="mb-0">+385 (91) 189-2311</p>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary" style="width: 50px; height: 50px;">
+                            <i class="fa fa-envelope-open text-white"></i>
+                        </div>
+                        <div class="ms-3">
+                            <h5 class="text-primary">Email</h5>
+                            <p class="mb-0">vatrogasci.satnicadj@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.671897033983!2d18.37177327626804!3d45.35543507107235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475cffd83535b1d9%3A0xf6cb48e302cc10e5!2sDVD%20Satnica%20%C4%90akova%C4%8Dka!5e0!3m2!1shr!2shr!4v1700580344174!5m2!1shr!2shr" frameborder="0" style="min-height: 300px; width: 100%; height: 100%; border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
+                <div class="col-lg-4 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
+                    <form>
+                        <div class="row g-3">
+                            <div class="col-md-6">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control" id="name" placeholder="Ime i plezime">
+                                    <label for="name">Ime i prezime</label>
                                 </div>
                             </div>
-                        </form>
-                    </div>
+                            <div class="col-md-6">
+                                <div class="form-floating">
+                                    <input type="email" class="form-control" id="email" placeholder="Email adresa">
+                                    <label for="email">Email adresa</label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-floating">
+                                    <textarea class="form-control" placeholder="Poruka" id="message" style="height: 250px"></textarea>
+                                    <label for="message">Poruka</label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <button class="btn btn-primary w-100 py-3" type="submit">Pošalji!</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Booking Start -->
+    <!-- Contact End -->
 
 
-    <!-- Process Start -->
+    <!-- Fleet Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center pb-4 wow fadeInUp" data-wow-delay="0.1s">
@@ -395,7 +424,7 @@
             </div>
         </div>
     </div>
-    <!-- Process Start -->
+    <!-- Fleet Start -->
 
 
     <!-- Team Start -->
@@ -468,61 +497,23 @@
     <!-- Team End -->
 
 
-    <!-- Testimonial Start -->
-    <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container">
-            <div class="text-center">
-                <h6 class="section-title bg-white text-center text-primary px-3">Mišljenja</h6>
-                <h1 class="mb-5">Što drugi misle o nama?</h1>
-            </div>
-            <div class="owl-carousel testimonial-carousel position-relative">
-                <div class="testimonial-item bg-white text-center border p-4">
-                    <img class="bg-white rounded-circle shadow p-1 mx-auto mb-3" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Leon Đanić</h5>
-                    <p>31421, Satnica Đakovačka</p>
-                    <p class="mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident dolor laborum tempora perferendis, asperiores fugiat molestiae optio neque voluptatum. Itaque aperiam odio, quas similique, ab soluta perferendis officiis libero iste cum tempore sapiente? Itaque a nemo fugit repellat modi odit sequi sed recusandae assumenda nam?</p>
-                </div>
-                <div class="testimonial-item bg-white text-center border p-4">
-                    <img class="bg-white rounded-circle shadow p-1 mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Mihael Đanić</h5>
-                    <p>31421, Satnica Đakovačka</p>
-                    <p class="mt-2 mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt illo autem eius aspernatur?<br><br><br><br><br><br><br></p>
-                </div>
-                <div class="testimonial-item bg-white text-center border p-4">
-                    <img class="bg-white rounded-circle shadow p-1 mx-auto mb-3" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Marija Breški</h5>
-                    <p>31421, Gašinci</p>
-                    <p class="mt-2 mb-0">Lorem ipsum dolor sit amet consectetur adipisicing.<br><br><br><br><br><br><br><br></p>
-                </div>
-                <div class="testimonial-item bg-white text-center border p-4">
-                    <img class="bg-white rounded-circle shadow p-1 mx-auto mb-3" src="img/testimonial-4.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Lara Jagodić</h5>
-                    <p>31422, Gorjani</p>
-                    <p class="mt-2 mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur cum necessitatibus quo facere, sunt, ipsa quidem tempore ducimus repellat commodi non fugiat totam.<br><br><br><br><br></p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Testimonial End -->
-        
-
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Važni linkovi</h4>
-                    <a class="btn btn-link" href="">O nama</a>
-                    <a class="btn btn-link" href="">Galerija</a>
-                    <a class="btn btn-link" href="">Intervencije</a>
-                    <a class="btn btn-link" href="">Kontakt</a>
-                    <a class="btn btn-link" href="">Registracija</a>
+                    <a class="btn btn-link" href="o_nama.html">O nama</a>
+                    <a class="btn btn-link" href="galerija.html">Galerija</a>
+                    <a class="btn btn-link" href="intervencije.html">Intervencije</a>
+                    <a class="btn btn-link" href="kontakt.html">Kontakt</a>
+                    <a class="btn btn-link" href="registracija.html">Registracija</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Kontakt informacije</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Ante Starčevića 24,<br>31421 Satnica Đakovačka</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+385 (91) 189-2311</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>dvd.satnicadj@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>dvd.satnicadj@hotmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href="www.facebook.com/dvd.satnicadj"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social" href="www.instagram.com/vatrogasci.satnicadj"><i class="fab fa-instagram"></i></a>
@@ -565,7 +556,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="index.html">DVD Satnica Đakovačka</a>, Sva prava pridržana. Dizajn: <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>.
+                        &copy; <a class="border-bottom" href="index.html">DVD Satnica Đakovačka</a>, Sva prava pridržana. Template: <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
