--- a/intervencije.html
+++ b/intervencije.html
@@ -82,7 +82,7 @@
                     <a href="intervencije.html" class="nav-item nav-link active">Intervencije</a>
                     <a href="kontakt.html" class="nav-item nav-link">Kontakt</a>
                 </div>
-                <a href="" class="btn btn-primary rounded-pill py-2 px-4">Registracija</a>
+                <a href="registracija.html" class="btn btn-primary rounded-pill py-2 px-4">Registracija</a>
             </div>
         </nav>
 
@@ -101,7 +101,7 @@
     <!-- Navbar & Hero End -->
 
 
-    <!-- Service Start -->
+    <!-- Emergency Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -201,7 +201,7 @@
             </div>
         </div>
     </div>
-    <!-- Service End -->
+    <!-- Emergency End -->
         
 
     <!-- Footer Start -->
@@ -209,54 +209,52 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Company</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Privacy Policy</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">FAQs & Help</a>
+                    <h4 class="text-white mb-3">Važni linkovi</h4>
+                    <a class="btn btn-link" href="o_nama.html">O nama</a>
+                    <a class="btn btn-link" href="galerija.html">Galerija</a>
+                    <a class="btn btn-link" href="intervencije.html">Intervencije</a>
+                    <a class="btn btn-link" href="kontakt.html">Kontakt</a>
+                    <a class="btn btn-link" href="registracija.html">Registracija</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Contact</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <h4 class="text-white mb-3">Kontakt informacije</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Ante Starčevića 24,<br>31421 Satnica Đakovačka</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+385 (91) 189-2311</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>dvd.satnicadj@hotmail.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="www.facebook.com/dvd.satnicadj"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="www.instagram.com/vatrogasci.satnicadj"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Gallery</h4>
+                    <h4 class="text-white mb-3">Galerija</h4>
                     <div class="row g-2 pt-2">
                         <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/package-1.jpg" alt="">
+                            <img class="img-fluid bg-light p-1" src="img/novosti/Brijest.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/package-2.jpg" alt="">
+                            <img class="img-fluid bg-light p-1" src="img/novosti/Vukovar_2023.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/package-3.jpg" alt="">
+                            <img class="img-fluid bg-light p-1" src="img/novosti/Brijest_4.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/package-2.jpg" alt="">
+                            <img class="img-fluid bg-light p-1" src="img/novosti/pozar_13srp.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/package-3.jpg" alt="">
+                            <img class="img-fluid bg-light p-1" src="img/novosti/natjecanje_gorjani_2023.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/package-1.jpg" alt="">
+                            <img class="img-fluid bg-light p-1" src="img/novosti/natjecanje_gorjani_2023.jpg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <h4 class="text-white mb-3">Obavijesti</h4>
+                    <p>Unesite svoju email adresu kako biste dobivali obavijesti o novosti na našoj web stranici.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-primary w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                        <input class="form-control border-primary w-100 py-3 ps-4 pe-5" type="text" placeholder="Email adresa">
+                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Potvrdi</button>
                     </div>
                 </div>
             </div>
@@ -265,17 +263,14 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
-
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                        &copy; <a class="border-bottom" href="index.html">DVD Satnica Đakovačka</a>, Sva prava pridržana. Template: <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
-                            <a href="">Home</a>
-                            <a href="">Cookies</a>
-                            <a href="">Help</a>
-                            <a href="">FQAs</a>
+                            <a href="index.html">Naslovnica</a>
+                            <a href="kolacici.html">Kolačići</a>
+                            <a href="pomoc.html">Pomoć</a>
+                            <a href="faq.html">Često postavljena pitanja</a>
                         </div>
                     </div>
                 </div>
